# mirror

./: .env.example  .env.kraken-demo.example  .gitignore  DECISIONS.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/mirror/: cli.py  config.py  db.py  errors.py  logging.py  models.py
backend/mirror/agents/: blue.py  crossover.py  patcher.py  red.py  strategy_schema.py
backend/mirror/api/: main.py  schemas.py
backend/mirror/api/routes/: agents.py  blue_findings.py  calibration.py  events.py  forecasts.py  health.py  lineage.py  onchain.py  patches.py  stream.py  trades.py
backend/mirror/backtest/: gate.py  replay.py
backend/mirror/calibration/: brier.py  curve.py  regime.py
backend/mirror/chain/: identity.py  registration_file.py  reputation.py
backend/mirror/clients/: chain.py  featherless.py  gemini.py  ipfs.py  kraken.py  patcher_model.py
backend/mirror/orchestrator/: graph.py  resolution.py  runner.py  schedule.py
backend/mirror/tournament/: __init__.py  adaptive.py  exits.py  gate.py  objective.py  ranking.py  risk.py
backend/tests/: test_agent_api_serializers.py  test_blue.py  test_brier.py  test_config.py  test_crossover.py  test_holdout_gate.py  test_kraken_client.py  test_patch_parser.py  test_registration_metadata.py  test_replay.py  test_strategy_schema.py  test_tournament.py  test_tournament_exits.py
docs/: FAILURE_INJECTION.md  VERIFICATION.md
frontend/: package.json  tailwind.config.ts
(+26 files in other folders)
