[project]
name = "mirror-backend"
version = "0.1.0"
description = "MIRROR AI trading agents"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "apscheduler>=3.10.4",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "greenlet>=3.0.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2",
  "sqlalchemy[asyncio]>=2.0.30",
  "structlog>=24.1.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
  "web3>=6.20.0"
]

[project.scripts]
mirror = "mirror.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mirror"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0"
]
